--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,14 @@ a {
   left: 600px;
   z-index: 1;
 }
-
+.form-container__item {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 2px solid gray;
+}
+label {
+  font-weight: bold;
+}
 label input {
   margin-left: 20px;
 }
