--- a/src/components/Header/UserData/DropdownMenu/DropDownMenu.module.css
+++ b/src/components/Header/UserData/DropdownMenu/DropDownMenu.module.css
@@ -1,3 +1,15 @@
 .menu {
-  width: 200px;
+  position: relative;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  top: 70px;
+  right: 0px;
+  width: 180px;
+  background-color: white;
+  font-weight: bold;
+  position: absolute;
+
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
